[metadata]
name = pymhz
version = attr: pymhz.__version__

author = Ondřej Červenka
author_email = gogo.lejzr@gmail.com

description = Library for reading M-HZ CO2 sensors.

[options]
zip_safe=False
include_package_data=True
packages=find:

install_requires =
    pyserial

[options.extras_require]
test =
    pytest